Update negative login 15/08/2024

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,8 @@ env =
     ENV = 1
 
 addopts =
-    -m positive
-;    -m negative
+;    -m positive
+    -m negative
 ;    -m exceptions
 ;    -n 6
     --browser edge
