Update Exception NoSuchElement 15/08/2024

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,11 +4,13 @@ env =
 
 addopts =
 ;    -m positive
-    -m negative
+;    -m negative
 ;    -m exceptions
+    -m debug
 ;    -n 6
     --browser edge
 markers =
     positive: All test positive
     negative: All test negative
     exceptions: All test exceptions
+    debug: All test debug
