--- a/pytest.ini
+++ b/pytest.ini
@@ -6,8 +6,8 @@ addopts =
 ;    -m positive
 ;    -m negative
 ;    -m exceptions
-    -m debug
-;    -n 6
+;    -m debug
+;    -n 5
     --browser edge
 markers =
     positive: All test positive
